# NoiseGenerator

./: .clang-format  .gitignore  CMakeLists.txt  TODO  build.sh  conanfile.py
src/: display.cpp  display.hpp  frametime.cpp  frametime.hpp  generator_builder.cpp  generator_builder.hpp  generator_state.hpp  generators.hpp  grid.cpp  grid.hpp  main.cc  perlin_noise_generator.cpp  random_generator.cpp  single_pass_generator.cpp  util.hpp
